Fix performer card name truncation

--- a/ui/v2.5/src/components/Performers/styles.scss
+++ b/ui/v2.5/src/components/Performers/styles.scss
@@ -57,6 +57,15 @@
 }
 
 .performer-card {
+  width: 20rem;
+
+  &-image {
+    height: 30rem;
+    min-width: 11.25rem;
+    object-fit: cover;
+    object-position: top;
+  }
+
   .flag-icon {
     bottom: 1rem;
     height: 2rem;
